# drey

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  install.md  releasing.md
scripts/: install.sh  uninstall.sh
src/: config.rs  framing.rs  install.rs  main.rs  msg.rs  shim.rs  text.rs
src/daemon/: backend.rs  mod.rs  registry.rs  session.rs
tests/: cli.rs  e2e.py  mock_server.py  smoke_real.py
