[package]
name = "drey"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
description = "A sharing proxy for language servers: one server process per workspace, many clients"
license = "Apache-2.0"
authors = ["Mario Đanić <mario@djanic.com>"]
repository = "https://github.com/mario/drey"
homepage = "https://github.com/mario/drey"
documentation = "https://github.com/mario/drey/blob/main/docs/architecture.md"
readme = "README.md"
keywords = ["lsp", "language-server", "proxy", "rust-analyzer", "editor"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["/.github"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
todo = "warn"
dbg_macro = "warn"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "process", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
